# molink

./: .gitignore  README.md  THIRD_PARTY.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml
exps/: README.md
exps/core/: evaluator.py  metrics.py  utils.py
exps/denovo/: eval.py  hparams.yaml  run.py
exps/linker_design/: eval.py  hparams.yaml  run.py
exps/scaffold_decoration/: eval.py  hparams.yaml  run.py
exps/scaffold_morphing/: eval.py  hparams.yaml  run.py
scripts/: preprocess_data.py  sample.py  train.py
src/molink/: __init__.py  data.py  model.py  rwkv7.py  sampler.py
src/molink/utils/: __init__.py  bracket_safe.py  safe_utils.py  training.py
