[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molink"
readme = "README.md"
description = "RWKV-7 + SAFE molecular generator"
authors = [{ name = "Molink Contributors" }]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dynamic = ["version"]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "datasets>=2.18.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "lightning>=2.3.0",
    "safe-mol>=0.1.13",
    "datamol>=0.12.0",
    "rdkit>=2023.9.1",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "transformers>=4.38.0",
    "wandb>=0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
